# session_manager

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py  session_manager.py  setup.py
ariba/: __init__.py  additional_integration.py  ariba.py  locators.py  ordem.txt  settings.py  supplier_award.py
browser/: __init__.py  browser.py  exceptions.py
database/: __init__.py  manage.py  models.py
logger/: __init__.py
vault/: __init__.py  exceptions.py  vault.py
